<resources>

    <!-- String Values created by me-->

    <string name="app_name">EventScheduling</string>
    <string name="createPackage">Create Package</string>
    <string name="registration">Registration</string>
    <string name="Client">Client</string>
    <string name="EventOrganizer">Event Organizer</string>
    <string name="SignUp">Sign Up</string>
    <string name="Email">Email</string>
    <string name="SignIn">Sign In</string>
    <string name="eventschedulingsystem">Event Scheduling System</string>
    <string name="Map">Map</string>
    <string name="BusinessContactInformation">Business Contact Information</string>
    <string name="Province">Province</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="Next">Next</string>
    <string name="Name">Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="BusinessInformation">Business Information</string>
    <string name="BusinessCategory"> Business Category</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="logo">Logo</string>
    <string name="icon">Icon</string>
    <string name="whoAreYou">Who are you?</string>
    <string name="BusinessName">Business Name</string>
    <string name="title_activity_evnt_org_home">evntOrg_home</string>
    <string name="search">Search</string>
    <string name="history">History</string>

    <!-- Defaults values created by android studio -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Navigation Bar Strings -->
    <string name="home">Home</string>
    <string name="packages">Packages</string>
    <string name="order">Order</string>
    <string name="messages">Messages</string>
    <string name="analysis">Analysis</string>
    <string name="portfolio">Portfolio</string>
    <string name="calender">Calender</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ok">OK</string>
    <string name="Search">Search</string>
    <string name="Line">Line</string>
    <string name="hamza">Hamza</string>
    <string name="image_about_package">Image about Package</string>
    <string name="image_of_location_icon">Image of location icon</string>
    <string name="delete_account">Delete Account</string>
    <string name="create">Create</string>
    <string name="filter">Filter</string>

    <!-- Drawer list array!-->


    <array name="titles">
        <item>Home</item>
        <item>Packages</item>
        <item>Messages</item>
    </array>

    <!--Array list for analysis spinner-->
    <array name="timespan">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </array>
    <array name="service_list">
        <item>Catering</item>
        <item>Decoration</item>
        <item>Cards</item>
    </array>
    <array name="food_list">
        <item>Chicken</item>
        <item>Mutton</item>
        <item>Beaf</item>
    </array>


    <array name="Business_Category">
        <item>Event_Organizer</item>
        <item>Venue_Provider</item>
        <item>Caterer</item>
        <item>Decoration</item>
        <item>Car_Rent</item>
        <item>Invitation_Card</item>
    </array>
    <array name="LocationType">
        <item>Current_Location</item>
        <item>Random_Location</item>
    </array>

    <array name="Venue_list">
        <item>Bandhan Marriage Hall</item>
        <item>Royal Marriage Hall</item>
        <item>City Marriage Hall</item>
        <item>Paradise Marriage Hall</item>
        <item>Sanjog Marriage Hall</item>
        <item>Makkah Marriage Hall</item>
    </array>

    <array name="caterer_services">
        <item>Food</item>
        <item>Man Service</item>
        <item>Extra</item>
    </array>
<string-array name="evnt_service">
</string-array>
    <string name="agora_app_id">be47ee1a77524580b5fd5976be3f91e1</string>
    <string name="no_data">No Data</string>
    <string name="addToBackStack"></string>
</resources>


