<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/ic_package"
            android:title="@string/packages" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_analysis"
            android:title="@string/analysis" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_calender"
            android:title="@string/calender" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
