<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_client"
            android:icon="@drawable/ic_person"
            android:title="Profile" />
        <item
            android:id="@+id/nav_packages_client"
            android:icon="@drawable/backet_black"
            android:title="Packages"
            />
        <item
            android:id="@+id/nav_orders_client"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="Orders"
            />
        <item
            android:id="@+id/nav_search_client"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_messages_client"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_history_client"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout_client"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>