<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/evnt_imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/evnt_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:srcCompat="@drawable/eventschedulingwhitedash" />

    <EditText
        android:id="@+id/evnt_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/borderstyle"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_light"
        android:textColor="@color/secondarycolor"
        app:layout_constraintEnd_toEndOf="@+id/evnt_imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/evnt_imageView4"
        app:layout_constraintTop_toTopOf="@+id/evnt_guideline2" />

    <ImageView
        android:id="@+id/evnt_imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="@+id/evnt_email_editText"
        app:layout_constraintStart_toStartOf="@+id/evnt_imageView3"
        app:layout_constraintTop_toTopOf="@+id/evnt_email_editText"
        app:srcCompat="@mipmap/ifinder" />


    <ImageView
        android:id="@+id/evnt_imageView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="@+id/evnt_imageView4"
        app:layout_constraintStart_toStartOf="@+id/evnt_imageView4"
        app:layout_constraintTop_toBottomOf="@+id/evnt_imageView4"
        app:srcCompat="@mipmap/pinicon" />

    <EditText
        android:id="@+id/evnt_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="@drawable/borderstyle"
        android:ems="10"
        android:textColor="@color/secondarycolor"

        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/evnt_imageView6"
        app:layout_constraintEnd_toEndOf="@+id/evnt_email_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/evnt_imageView6"
        app:layout_constraintTop_toTopOf="@+id/evnt_imageView6"
        app:layout_constraintVertical_bias="0.581" />

    <Button
        android:id="@+id/evnt_signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/secondarycolor"
        app:cornerRadius="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/SignIn"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/evnt_password_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/evnt_imageView6"
        app:layout_constraintTop_toBottomOf="@+id/evnt_forget_textView" />

    <TextView
        android:id="@+id/evnt_forget_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/evnt_password_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/evnt_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/evnt_password_editText" />

    <Button
        android:id="@+id/evnt_registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondarycolor"
        android:text="@string/SignUp"
        app:cornerRadius="32dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/evnt_signIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/evnt_signIn"
        app:layout_constraintTop_toBottomOf="@+id/evnt_signIn"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/evnt_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ProgressBar
        android:id="@+id/evnt_progBar_Evnt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
