<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/clientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Client"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/client_imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/client_imageView"
        app:layout_constraintTop_toBottomOf="@+id/client_imageView"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="297dp"
        android:layout_height="289dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/eventschedulingwhitedash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/EventOrganizer"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/evnt_image"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="@+id/evnt_image"
        app:layout_constraintTop_toBottomOf="@+id/evnt_image"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/evnt_image"
        android:layout_width="41dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@mipmap/ifinder" />

    <ImageView
        android:id="@+id/client_imageView"
        android:layout_width="41dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/evnt_image"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@mipmap/ifinder" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/whoAreYou"
        android:textColor="@color/secondarycolor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>
